Save uncommitted changes before rebase

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="theme-dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/svite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iNube Live Stream</title>
+    <script>
+      // Apply the saved theme immediately to prevent flashing
+      (function() {
+        const savedTheme = localStorage.getItem('theme') || 'dark';
+        document.documentElement.classList.add(`theme-${savedTheme}`);
+        document.documentElement.dataset.theme = savedTheme;
+      })();
+    </script>
   </head>
-  <body>
+  <body class="theme-dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
